add support for progress notification during run operation
Related-to: TIE-239
